# Pegasus-Cam-CV

./: CMakeCache.txt  CMakeLists.txt  LICENSE  Makefile  README.md  arucoStream.py  cmake_install.cmake  faceDetectOP.cpp  faceDetectStream.py  faceDetectStreamOP.py  openStream.cpp  openStream.py  openStream2.py  openStreamOP.py
ball-tracking/: ball_tracking.py
